Update #9. 레퍼런스 멤버 함수.md

--- a/3. 객체 지향 프로그래밍/#9. 레퍼런스 멤버 함수.md
+++ b/3. 객체 지향 프로그래밍/#9. 레퍼런스 멤버 함수.md
@@ -99,3 +99,262 @@ __출력 결과__
 > 4:12:8
 
 <br/>
+<br/>
+
+## 2) 상수 멤버 함수(Constant Member Function)란?
+
+<br/>
+
+클래스 안에 존재하는 함수 역시 상수로 선언 할수있다. <br/>
+
+<br/>
+
+상수 멤버 함수는 다음과 같이 선언할 수 있다. <br/>
+
+<br/>
+
+```c++
+int getHour() const { return hour; }
+```
+
+<br/>
+
+위와 같이 함수 뒤에 const 키워드를 추가해주면 된다. <br/>
+만약, 함수 선언을 먼저 하고 뒤에 정의를 쓰는 경우엔 선언과 정의에 모두 const 키워드를 명시한다. <br/>
+
+<br/>
+
+```
+class Time
+{
+private:
+	int hour;
+	int minute;
+	int second;
+	
+public:
+	Time(int hour_, int minute_, int second_){
+		hour = hour_;
+		minute = minute_;
+		second = second_;
+	}
+
+	int getHour() const;
+	int getMinute() { return minute; }
+	int getSecond() { return second; }
+	
+};
+
+int Time::getHour() const { 
+	return hour; 
+}
+```
+
+<br/>
+
+상수 멤버 변수는 다음과 같은 특징을 같는다. <br/>
+
+<br/>
+
+1. 상수 멤버 함수에서는 멤버 변수에 대한 값을 바꿀 수 없다. <br/>
+2. 상수 멤버 함수에서 비-상수 멤버 변수를 호출할 수 없다. <br/>
+
+<br/>
+<br/>
+
+## 3) 상수 참조(Constant Reference)란?
+
+<br/>
+
+앞서 소개한 Time 클래스에 대한 프로그래밍을 아래와 같이 진행했다. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+class Time
+{
+private:
+	int hour;
+	int minute;
+	int second;
+	
+public:
+	Time(int hour_, int minute_, int second_){
+		hour = hour_;
+		minute = minute_;
+		second = second_;
+	}
+
+	int getHour() { return hour; }
+	int getMinute() { return minute; }
+	int getSecond() { return second; }
+	void go30sec() { this->second+=30; }
+	
+};
+
+void printTime(Time time){
+	cout << time.getHour() << ":" << time.getMinute() 
+	<< ":" << time.getSecond() << endl;
+	time.go30sec();
+	
+}
+
+int main() {
+	
+	Time time_1(4,12,8);
+	
+	printTime(time_1);
+	printTime(time_1);
+	
+	return 0;
+}
+```
+
+<br/>
+
+이 함수를 실행하면 다음과 같은 결과가 나온다.
+
+__출력 결과__
+
+<br/>
+
+> 4:12:8 <br/>
+> 4:12:8 <br/>
+
+<br/>
+
+printDate 함수를 실행하게 되면 second 값이 30증가 해야 한다. <br/>
+하지만, 출력 결과 변동이 없는 것으로 나타난다 <br/>
+
+<br/>
+
+그 이유는 함수로 객체 변수를 전달해주게 된다면, 함수가 실행 될 때 하나의 객체가 새로 복사되어 추가 된다. <br/>
+그리고 그 객체는 함수가 실행되는 동안에만 유효하므로, 해당 함수 안에서의 객체에서만 증가한다. <br/>
+
+<br/>
+
+이 문제를 해결하는 법은 간단하다. <br/>
+함수 객체를 파라미터로 전달핼 떄 객체를 통으로 주는 것이 아니라 주소값만 전달하면 된다. <br/>
+
+<br/>
+
+```c++
+void printTime(Time& time){
+	cout << time.getHour() << ":" << time.getMinute() 
+	<< ":" << time.getSecond() << endl;
+	time.go30sec();
+	
+}
+
+int main() {
+	
+	Time time_1(4,12,8);
+	
+	printTime(time_1);
+	printTime(time_1);
+	
+	return 0;
+}
+```
+
+<br/>
+
+__실행 결과__
+
+<br/>
+
+> 4:12:8 <br/>
+> 4:12:38 <br/>
+
+<br/>
+
+바뀐 부분은 PrintTime의 파라미터를 객체의 주소값으로 바꿨다는 것이다. <br/>
+이렇게 되면 해당 함수는 주소값에 있는 객체를 참조하기 때문에, 인스턴스의 second도 같이 바뀐다. <br/>
+
+<br/>
+
+함수에 있는 파라미터도 상수로 표현할 수 있다. <br/>
+아래의 함수를 살펴보자. <br/>
+
+<br/>
+
+```c++
+void printTime(const Time& time){
+	cout << time.getHour() << ":" << time.getMinute() 
+	<< ":" << time.getSecond() << endl;
+	time.go30sec();
+	
+}
+```
+
+함수의 파라미터를 const 상수로 선언했다. <br/>
+이 의미는 time 객체를 상수로 선언해 값 변경을 하지 않겠다는 의미다. <br/>
+
+<br/>
+
+이 경우 함수를 실행하면 컴파일 에러가 발생한다. <br/>
+
+<br/>
+
+파라미터를 상수로 선언했다면, 해당 함수에서 선언되는 멤버들도 모두 상수여야 한다.<br/>
+시간, 분, 초를 출력하는 함수를 전부 상수로 선언하면 된다. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+class Time
+{
+private:
+	int hour;
+	int minute;
+	int second;
+	
+public:
+	Time(int hour_, int minute_, int second_){
+		hour = hour_;
+		minute = minute_;
+		second = second_;
+	}
+
+	int getHour() const { return hour; }
+	int getMinute() const { return minute; }
+	int getSecond() const { return second; }
+	void go30sec() { this->second+=30; }
+	
+};
+
+void printTime(const Time& time){
+	cout << time.getHour() << ":" << time.getMinute() 
+	<< ":" << time.getSecond() << endl;
+	//time.go30sec();
+	
+}
+
+int main() {
+	
+	Time time_1(4,12,8);
+	
+	printTime(time_1);
+	printTime(time_1);
+	
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__ 
+
+<br/>
+
+> 4:12:8 <br/>
+> 4:12:8 <br/>
+
+<br/>
+
