Update #8. 람다 표현식.md

--- a/2. 제네릭 프로그래밍/#8. 람다 표현식.md
+++ b/2. 제네릭 프로그래밍/#8. 람다 표현식.md
@@ -22,4 +22,193 @@
 
 아래와 같은 코드가 있다고 생각해보자. <br/>
 
+<br/>
 
+```c++
+#include <iostream>
+using namespace std;
+
+void sum1(int a, int b){
+	cout << "sum1 : " << a+b << endl; 
+}
+
+int main() {
+	
+	sum1(1, 4);
+	
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> sum1: 5 <br/>
+
+<br/>
+
+위 처럼 sum1은 두 정수의 합계를 구하는 함수가 있다고 하자. <br/>
+
+<br/>
+
+이를 람다식으로 변형한다면 다음과 같다. <br/>
+
+<br/>
+
+```c++
+[](int a, int b)
+    {
+        cout << "lambda : " << a + b << endl;
+    }(6, 1);
+```
+
+<br/>
+
+이를 전체 식으로 보면 다음과 같다.<br/>
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+void sum1(int a, int b){
+	cout << "sum1 : " << a+b << endl; 
+}
+
+int main() {
+	
+	sum1(1, 4);
+	
+	[](int a, int b)
+    {
+        cout << "lambda : " << a + b << endl;
+    }(6, 1);
+	
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> sum1 : 5 <br/>
+> lambda : 7 <br/>
+
+<br/>
+<br/>
+
+## 2) 람다 표현식의 정의
+
+<br/>
+
+람다 표현식은 다음과 같은 구조를 갖는다.<br/>
+
+<br/>
+
+> [] (int a, int b) ->int {  cout << " " << endl; } 
+
+<br/>
+
+이를 총 4개의 부분으로 나눠 보자. <br/>
+
+<br/>
+
+__개시자 (introducer) : [] __
+
+<br/>
+
+안에 외부 변수를 입력해 람다 함수가 이를 캡쳐 한뒤, 이 변수를 람다 내부에서 이용할 수 있게한다. <br/>
+
+<br/>
+
+__인자 (parameter) : (int a, int b) __
+
+<br/>
+
+람다가 실행시 받을 인자 역햘을 한다.<br/>
+함수의 파라미터와 동일하고, 파라미터가 없는 람다의 경우 생략 가능하다. <br/>
+
+<br/>
+
+__반환 타입 (return type) : ->int __
+
+<br/>
+
+람다가 반환할 타입을 입력한다. <br/>
+return 값이 없다면 생략 가능하다. <br/>
+
+<br/>
+
+__함수 내용 (statement) : { ... } __
+
+<br/>
+
+람다 표현식의 내용이 들어간다. <br/>
+
+<br/>
+
+이 내용을 보면 위에서 선언한 람다 표현식에 대한 이해가 가능하다. <br/>
+
+<br/>
+<br/>
+
+## 3) 람다 사용 예시
+
+<br/>
+
+람다는 다양한 방법으로 사용할 수 있다. <br/>
+람다 사용에 있어 핵심은 반복 자동화 되는 함수의 간결화다. <br/>
+
+<br/>
+
+람다를 사용하면 아래와 같이 Vector 원소의 합을 구할 수 있다. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+using namespace std;
+
+int sum_all(vector<int> arr, int length){
+	int sum1 = 0;
+	for(auto iter=arr.begin(); iter!= arr.end(); iter++){
+		sum1+=*iter;
+	} 
+	return sum1;
+}
+
+int main() {
+	
+	vector<int> arrays = {23, 35, 134, 3, 2, 9, 38, 11, 20, 1};
+	
+	// Function
+	cout << "sum_all = " << sum_all(arrays, arrays.size()) << endl;
+	
+	// Lambda
+	int answer = 0; 
+	for_each(arrays.begin(), arrays.end(), [&answer](int i) {answer+=i;});
+	cout << "lambda = " << answer << endl;
+	
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> sum_all = 276 <br/>
+> lambda = 276 <br/>
+
+<br/>
