Update #1. STL 개요.md

--- a/4. 표준 템플릿 라이브러리(STL)/#1. STL 개요.md
+++ b/4. 표준 템플릿 라이브러리(STL)/#1. STL 개요.md
@@ -114,3 +114,16 @@ __반복자의 요구사항__ <br/>
 
 <br/>
  
+__반복자의 종류__
+
+<br/>
+
+1. 입력 반복자(input iterator)
+2. 출력 반복자(output iterator)
+3. 순방향 반복자(forward iterator)
+4. 양방향 반복자(bidirectional iterator)
+5. 임의 접근 반복자(random access iterator)
+
+<br/>
+
+
