--- a/4. 표준 템플릿 라이브러리(STL)/#1. STL 개요.md
+++ b/4. 표준 템플릿 라이브러리(STL)/#1. STL 개요.md
@@ -111,6 +111,7 @@ __반복자의 요구사항__ <br/>
 - 반복자가 가리키는 요소의 값에 접근할 수 있어야 한다. 이때 참조 연산자를 사용한다. <br/>
 - 반복자 사아의 대입, 비교 연산이 가능해야 한다. <br/>
 - 가리키는 요소의 주변 요소로 이동이 가능해야 한다. <br/>
+- 반복자의 위치를 판단할수 있도록 =, ==, != 와같은 반복자간의 대입, 비교 연산이 정의되어야 한다. <br/>
 
 <br/>
  
@@ -126,4 +127,89 @@ __반복자의 종류__
 
 <br/>
 
+__1. 입력 반복자 (Input Iterator)__ <br/>
 
+<br/>
+
+가장 단순한 형태의 반복자 <br/>
+컨테이너로부터 값을 읽는 데 사용 <br/>
+프로그램이 그 값을 변경 할 수 없으므로 읽기 전용 알고리즘에 사용 <br/>
+
+<br/>
+
+1. 증가 연산자를 사용하여 순방향으로만 이동 <br/>
+2. 참조 연산자를 사용하여 반복해서 요소 참조 가능 <br/>
+ 
+<br/>
+
+__2. 출력 반복자 (Output Iterator)__ <br/>
+
+<br/>
+
+컨테이너의 값을 변경하는 데 사용 <br/>
+프로그램에서 값을 변경할 수 있으나 읽을 수는 없다. <br/>
+쓰기 전용 알고리즘에서 사용 <br/>
+
+<br/>
+
+1. 증가 연산자를 사용하여 순방향으로만 이동<br/>
+2. 참조 연산자를 사용하여 단 한 번만 요소에 값을 입력 <br/>
+
+<br/>
+
+__3. 순방향 반복자 (Foward Iterator)__ <br/>
+
+<br/>
+
+입출력이 모두 가능한 반복자 <br/>
+다중 패스 알고리즘에 사용 가능 <br/>
+
+<br/>
+
+1. 증가 연산자를 사용하여 순방향으로만 이동 <br/>
+2. 참조 연산자를 사용하여 여러 번 반복해서 같은 요소에 참조, 변경이 가능 <br/>
+3. 입력 반복자와 출력 반복자의 기능 모두 포함 <br/>
+
+<br/>
+
+__4. 양방향 반복자 (Bidirectional Iterator)__ <br/>
+
+<br/>
+
+입출력이 모두 가능한 반복자 <br/>
+
+<br/>
+
+1. 증가 연산자(++)를 사용하면 순방향으로, 감소 연산자(--)를 사용하면 역방향으로도 이동 <br/>
+2. 참조 연산자를 사용하여 여러 번 반복해서 같은 요소 참조, 변경이 가능 <br/>
+3. 양방향 반복자는 순방향 반복자의 기능을 모두 포함한다. <br/>
+
+<br/>
+
+__5. 임의 접근 반복자 (Random Access Iterator)__ <br/>
+
+<br/>
+
+최상위 레벨의 반복자로서 많은 기능을 제공하는 반복자 <br/>
+
+<br/>
+
+1. 양방향 반복자의 모든 기능을 포함하고 있고, 첨자 연산자([])를 통해 임의의 요소에 접근 가능 <br/>
+2. 증감 연산자를 통해 양방향으로 이동할 수 있고, 요소의 순서를 결정하기 위해 관계 연산자를 사용 <br/>
+3. 임의 접근 반복자는 양방향 반복자의 모든 기능과 함께 다른 반복자의 일 모두 가능 <br/>
+
+<br/>
+<br/>
+
+__반복자 계층__ <br/>
+
+<br/>
+
+STL에서 반복자는 계층적으로 분류된다. <br/>
+예를 들어, 순방향 반복자는 입력 반복자와 출력 반복자의 모든 기능을 포함한다. <br/>
+
+<br/>
+
+다음은 C++ 반복자 계층 구조에 대한 예시다. <br/>
+
+<br/>
