--- a/4. 표준 템플릿 라이브러리(STL)/#1. STL 개요.md
+++ b/4. 표준 템플릿 라이브러리(STL)/#1. STL 개요.md
@@ -213,3 +213,34 @@ STL에서 반복자는 계층적으로 분류된다. <br/>
 다음은 C++ 반복자 계층 구조에 대한 예시다. <br/>
 
 <br/>
+
+__기타 반복자__ <br/>
+
+<br/>
+
+1. 스트림 반복자 (Stream Iterator) <br/>
+반복자 연산을 통해 알고리즘이 입출력 스트림에 쉽게 접근할 수 있도록 해준다. <br/>
+
+<br/>
+
+2. 삽입 반복자 (Insert Iterator) <br/>
+반복자의 복사 연산을 삽입 연산으로 변환 <br/>
+
+<br/>
+
+3. 역방향 반복자 (Reverse Iterator) <br/>
+순방향 반복자와는 반대 방향으로 동작하는 반복자, 증가 연산자 사용 시 역방향 이동 <br/>
+
+<br/>
+
+4. 상수 반복자 (Constant Iterator) <br/>
+반복자가 가리키는 값의 변경이 불가능한 반복자 <br/>
+
+<br/>
+<br/>
+
+### 2-3) 알고리즘 (Algorithm)
+
+<br/>
+
+
