Update #1. STL 개요.md

--- a/4. 표준 템플릿 라이브러리(STL)/#1. STL 개요.md
+++ b/4. 표준 템플릿 라이브러리(STL)/#1. STL 개요.md
@@ -243,4 +243,21 @@ __기타 반복자__ <br/>
 
 <br/>
 
+정렬, 삭제, 검색, 연산 등을 해결하는 일반화된 방법을 제공하는 함수 템플릿 <br/>
+
+<br/>
+
+__STL 알고리즘의 특징__ <br/>
+
+<br/>
+
+- C++ 에서 STL을 제공하는 지 목적은 알고리즘에 대한 효율적인 구현이다. <br/>
+- STL 알고리즘 함수나 STL 컨테이너의 멤버 함수를 사용하여 구현이 가능하다. <br/>
+- STL 컨테이너는 알고리즘을 제공하는 많은 전역 함수와 함께 사용해야만 제 기능을 발휘한다.<br/>
+- STL 알고리즘 함수는 반복자를 통해 임의의 컨테이너에 같은 방법으로 적용된다. <br/>
+- 대부분의 알고리즘 함수는 algorithm 헤더 파일과 numeric 헤더 파일에 정의되어 있다. <br/>
+
+<br/>
+
+__STL 알고리즘의 종류__ <br/>
 
