Update #1. STL 개요.md

--- a/4. 표준 템플릿 라이브러리(STL)/#1. STL 개요.md
+++ b/4. 표준 템플릿 라이브러리(STL)/#1. STL 개요.md
@@ -259,5 +259,63 @@ __STL 알고리즘의 특징__ <br/>
 
 <br/>
 
-__STL 알고리즘의 종류__ <br/>
+__1. 읽기 알고리즘__ <br/>
 
+<br/>
+
+- 컨테이너를 변경하지 않고, 컨테이너의 지정된 범위에서 특정 데이터를 읽기만 하는 함수 <br/>
+- find() : 두 개의 입력 반복자로 지정된 범위에서 특정 값을 가지는 첫 번째 요소를 가리키는 입력 반복자 반환 <br/>
+- for_each() : 두 개의 입력 반복자로 지정된 범위의 모든 요소를 함수 객체에 대입한 뒤 객에 반환 <br/>
+
+<br/>
+
+__2. 변경 알고리즘__ <br/>
+
+<br/>
+
+- 컨테이너의 지정된 범위에서 요소 값을 변경 하는 함수 <br/>
+- copy() : 두 개의 입력 반복자로 지정된 범위의 모든 요소를 출력 반복자가 가리키는 위치에 복사 <br/>
+- swap() : 두 개의 참조가 가리키는 위치의 값을 서로 교환 <br/>
+- transform() : 두 개의 입력 반복자로 지정된 범위의 모든 요소를 함수 객체에 대입한 뒤, 출력 반복자가 가리키는 위치에 복사 <br/>
+
+<br/>
+
+__3. 정렬 알고리즘__ <br/>
+
+<br/>
+
+- 컨테이너의 지정된 범위의 요소들이 정렬되도록 컨테이너 변경 <br/>
+- 올바른 정렬을 위해 입의 접근 반복자 사용 <br/>
+- sort() : 두 개의 임의 접근 반복자로 지정된 범위의 모든 요소를 서로 비교하여, 오름차순으로 정렬 <br/>
+- stable_sort() : 두 개의 임의 접근 반복자로 지정된 범위의 모든 요소를 서로 비교하여, 값이 서로 같은 요소들의 상대적인 순서는 유지하면서 오름차순으로 정렬 <br/>
+- binary_search() : 오름차순으로 정렬한 후에, 전달된 값과 같은 값이 있으면 참(true)을 반환하고 없으면 거짓(false)을 반환<br/>
+
+<br/>
+
+__4. 수치 알고리즘__ <br/>
+
+<br/>
+
+- 수치 알고리즘 함수는 다른 알고리즘 함수와는 달리 numeric 헤더 파일에 정의 <br/>
+- accumulate() : 두 개의 입력 반복자로 지정된 범위의 모든 요소의 합을 반환 <br/>
+
+<br/>
+<br/>
+
+### 2-4) 함수 객체 (Function Class)
+
+<br/>
+
+함수처럼 동작하는 객체로 operator() 연산자를 통해 오버로딩 한 객체 <br/>
+STL 알고리즘이 데이터를 처리하기 위한 매개변수 <br/>
+
+<br/>
+
+__함수 객체의 장점__
+
+<br/>
+
+- 함수 객체는 상태(state)를 포함할 수 있습니다. <br/>
+- 함수 객체는 타입이므로, 템플릿 인수로 사용할 수 있습니다 <br/>
+
+<br/>
