--- a/4. 표준 템플릿 라이브러리(STL)/#1. STL 개요.md
+++ b/4. 표준 템플릿 라이브러리(STL)/#1. STL 개요.md
@@ -93,6 +93,10 @@ set, multiset, map, multimap 등이 여기에 포함 <br/>
 연관 컨테이너는 보통 균형 잡힌 이진 탐색 트리(balanced binary search tree)나 해시 테이블(hash table)을 이용하여 구현 <br/>
 
 <br/>
+
+![](src/20210903_1.GIF)
+
+<br/>
 <br/>
 
 ### 2-2) 반복자 (Iterator)
@@ -212,6 +216,11 @@ STL에서 반복자는 계층적으로 분류된다. <br/>
 
 다음은 C++ 반복자 계층 구조에 대한 예시다. <br/>
 
+<br/>
+
+![](src/20210903_1.GIF)
+
+<br/>
 <br/>
 
 __기타 반복자__ <br/>
