Update #2. STL 컨테이너.md

--- a/4. 표준 템플릿 라이브러리(STL)/#2. STL 컨테이너.md
+++ b/4. 표준 템플릿 라이브러리(STL)/#2. STL 컨테이너.md
@@ -89,12 +89,72 @@ Vector를 선언하는 방법은 아래의 방법이 있다. <br/>
 <br/>
 
 ```c++
-vector<int> v1;                // vector 선언 (모든 벡터요소 0으로 초기화)
-vector<int> v2 = {10, 20, 30}; // vector 객체의 선언 및 초기화
-vector<int> v3(4);             //int형 백터 생성 후 크기를 4로 할당(모든 백터요소 0으로 초기화)
-vector<vector<int>> v4;         //2차원 백터 생성
+vector<int> v1;                 // vector 선언 (모든 벡터요소 0으로 초기화)
+vector<int> v2 = {10, 20, 30};  // vector 객체의 선언 및 초기화
+vector<int> v3(4);              // int형 백터 생성 후 크기를 4로 할당(모든 백터요소 0으로 초기화)
+vector<vector<int>> v4;         // 2차원 백터 생성
+vector<int> v5(5, 2);           // 크기가 5이고 요소가 2인 벡터 생성
+- 2로 초기화된 5개의 원소를 가지는 vector v를 생성합니다
 ```
 
 <br/>
 
+다음은 위의 방법으로 벡터를 선언하고 출력한 결과다.<br/>
+
+<br/>
+
+```c++
+#include <iostream>
+#include <vector>
+using namespace std;
+
+int main() {
+	
+	vector<int> v(5, 2);
+	for (int i = 0; i < v.size(); i++)
+	cout << v[i] << " ";
+	return 0;
+}
+```
+
+<br/>
+
+>   2 2 2 2 2
+
+<br/>
+<br/>
+
 __Vector 함수__
+
+<br/>
+
+- 1) assign(int a, int b) : 해당 범위 a의 값을 b로 초기화 <br/>
+
+<br/>
+
+벡터의 값을 새로 초기화 한다.
+
+<br/>
+
+```c++
+#include <iostream>
+#include <vector>
+using namespace std;
+
+int main() {
+	
+	vector<int> v(5, 2);
+	v.assign(2, 10);
+	
+	for (int i = 0; i < v.size(); i++)
+	cout << v[i] << " ";
+	
+	return 0;
+}
+```
+
+<br/>
+
+> 10 10 <br/>
+
+<br/>
