Update #2. STL 컨테이너.md

--- a/4. 표준 템플릿 라이브러리(STL)/#2. STL 컨테이너.md
+++ b/4. 표준 템플릿 라이브러리(STL)/#2. STL 컨테이너.md
@@ -128,7 +128,7 @@ __Vector 함수__
 
 <br/>
 
-- 1. assign(int a, int b) : 해당 범위 a의 값을 b로 초기화 <br/>
+- assign(int a, int b) : 해당 범위 a의 값을 b로 초기화 <br/>
 
 <br/>
 
