Update #2. STL 컨테이너.md

--- a/4. 표준 템플릿 라이브러리(STL)/#2. STL 컨테이너.md
+++ b/4. 표준 템플릿 라이브러리(STL)/#2. STL 컨테이너.md
@@ -128,7 +128,7 @@ __Vector 함수__
 
 <br/>
 
-- assign(int a, int b) : 해당 범위 a의 값을 b로 초기화 <br/>
+- v.assign(int a, int b) : 해당 범위 a의 값을 b로 초기화 <br/>
 
 <br/>
 
@@ -158,3 +158,47 @@ int main() {
 > 10 10 <br/>
 
 <br/>
+
+- v.at(idx) : idx번째 원소를 참조 (속도는 느리지만 범위 점검) <br/>
+- v[idx] : idx번째 원소를 참조 (범위 점검 안해서 속도 빠름) <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+#include <vector>
+using namespace std;
+
+int main() {
+	
+	vector<int> v = {10, 20, 30, 40};
+	
+	cout << v.at(5) << " ";		// runtime error!!
+	cout << v[5] << " ";		// 0 으로 출력
+
+	return 0;
+}
+```
+
+<br/>
+
+- v.front() : 첫번째 원소를 참조 <br/>
+- v.back() : 마지막 원소를 참조 <br/>
+- v.clear() : 모든 원소를 제거, 메모리는 남아있다. (size = 0, capacity 유지) <br/>
+- v.push_back(element) : 마지막 원소 뒤에 원소 element 삽입 <br/>
+- v.pop_back() : 마지막 원소를 제거 <br/> 
+- v.begin() : 첫번째 원소 (주로, iterator와 사용) <br/>
+- v.end() : 마지막의 다음 원소 (주로, iterator와 사용) <br/>
+- v.reserve(n) : vector의 capacity를 n으로 조정 <br/>
+- v.resize(n) : vector의 size를 n으로 변경 <br/>
+- v.resize(n,3) : vector의 size를 n으로 변경하고, 더 커진 경우 인자를 3으로 초기화 <br/>
+- v.size() : 원소의 갯수를 반환 <br/>
+- v.capacity() : 할당된 공간의 크기를 반환 <br/>
+- v2.swap(v1) : v1과 v2의 원소 내용과 capacity를 바꿈 <br/> 
+- v.insert(a, b, c) : a번째 위치부터 b개의 원소 4를 삽입 (a+1원소들은 뒤로 밀림) <br/>
+- v.insert(a, b) : a번째 위치에 값 3을 삽입 <br/>
+- v.erase(iter) : iter가 가리키는 원소를 제거 (capacity 유지) <br/>
+- v.empty() : vector가 비었으면 true 리턴 (size = 0) <br/>
+
+<br/>
+
