Update #2. STL 컨테이너.md

--- a/4. 표준 템플릿 라이브러리(STL)/#2. STL 컨테이너.md
+++ b/4. 표준 템플릿 라이브러리(STL)/#2. STL 컨테이너.md
@@ -182,18 +182,41 @@ int main() {
 
 <br/>
 
+참조 관련 <br/>
+
 - v.front() : 첫번째 원소를 참조 <br/>
 - v.back() : 마지막 원소를 참조 <br/>
+
+<br/>
+
+삽입 및 삭제 <br/>
+
+<br/>
+
 - v.clear() : 모든 원소를 제거, 메모리는 남아있다. (size = 0, capacity 유지) <br/>
 - v.push_back(element) : 마지막 원소 뒤에 원소 element 삽입 <br/>
 - v.pop_back() : 마지막 원소를 제거 <br/> 
 - v.begin() : 첫번째 원소 (주로, iterator와 사용) <br/>
 - v.end() : 마지막의 다음 원소 (주로, iterator와 사용) <br/>
+
+<br/>
+
+크기(size) 및 메모리 할당(capacity) <br/>
+
+<br/>
+
 - v.reserve(n) : vector의 capacity를 n으로 조정 <br/>
 - v.resize(n) : vector의 size를 n으로 변경 <br/>
 - v.resize(n,3) : vector의 size를 n으로 변경하고, 더 커진 경우 인자를 3으로 초기화 <br/>
 - v.size() : 원소의 갯수를 반환 <br/>
 - v.capacity() : 할당된 공간의 크기를 반환 <br/>
+
+<br/>
+
+기타 <br/>
+
+<br/>
+
 - v2.swap(v1) : v1과 v2의 원소 내용과 capacity를 바꿈 <br/> 
 - v.insert(a, b, c) : a번째 위치부터 b개의 원소 4를 삽입 (a+1원소들은 뒤로 밀림) <br/>
 - v.insert(a, b) : a번째 위치에 값 3을 삽입 <br/>
@@ -202,3 +225,36 @@ int main() {
 
 <br/>
 
+__Vector 예제__
+
+<br/>
+
+```c++
+#include <iostream>
+#include <vector>
+using namespace std;
+
+int main() {
+	
+	vector<int> v = {10, 20, 30, 40}; // vector 객체의 선언 및 초기화
+	cout << "v size is " << v.size() << endl;
+
+	v.push_back(50);
+	cout << "v size is " << v.size() << endl;
+	cout << "v[4] = " << v[4] << endl;
+
+    return 0;
+
+}
+```
+
+<br/>
+
+> v size is 4 <br/>
+> v size is 5 <br/>
+> v[4] = 50 <br/>
+
+<br/>
+<br/>
+
+## 1-2) 덱 (Deque)
