--- a/4. 표준 템플릿 라이브러리(STL)/#2. STL 컨테이너.md
+++ b/4. 표준 템플릿 라이브러리(STL)/#2. STL 컨테이너.md
@@ -258,3 +258,634 @@ int main() {
 <br/>
 
 ## 1-2) 덱 (Deque)
+
+<br/>
+
+Vector의 단점을 보완한 시퀀스 컨테이너 <br/>
+연속적인 데이터를 담는 배열<br/>
+
+<br/>
+
+__Deque의 특징__
+
+<br/>
+
+- Vector와 달리 메모리를 재할당 하지 않고 저장한다. <br/>
+- 시퀀스 컨테이너 이면서 Queue, Stack과 달리 배열의 앞 뒤 모두 데이터 연결이 가능하다. <br/>
+- Deque은 메모리가 부족할 떄 마다 새로 할당한다. <br/>
+
+<br/>
+
+__Deque의 사용__
+
+<br/>
+
+Deque를 사용하기 위해선 헤더 파일을 선언해야 한다. <br/>
+
+<br/>
+
+```c++
+#include <deque>
+```
+
+<br/>
+
+__Deque의 선언__
+
+<br/>
+
+Deque의 기본 선언 방법은 아래와 같다. <br/>
+
+<br/>
+
+> deque<템플릿인수> 객체이름(생성자인수);
+
+<br/>
+
+Deque를 선언하는 방법은 아래의 방법이 있다. <br/>
+
+<br/>
+
+```c++
+deque<int> d1;                 // deque 선언 (모든 덱요소 0으로 초기화)
+deque<int> d2 = {10, 20, 30};  // deque 객체의 선언 및 초기화
+deque<int> d3(4);              // int형 deque 생성 후 크기를 4로 할당(모든 덱요소 0으로 초기화)
+deque<deque<int>> d4;         // 2차원 deque 생성
+deque<int> d5(5, 2);           // 크기가 5이고 요소가 2인 deque 생성
+- 2로 초기화된 5개의 원소를 가지는 deque d5를 생성합니다
+```
+
+<br/>
+
+다음은 위의 방법으로 벡터를 선언하고 출력한 결과다.<br/>
+
+<br/>
+
+```c++
+#include <iostream>
+#include <deque>
+using namespace std;
+
+int main() {
+	
+	deque<int> d(5, 2);
+	for (int i = 0; i < d.size(); i++)
+	cout << d[i] << " ";
+	return 0;
+}
+```
+
+<br/>
+
+>   2 2 2 2 2
+
+<br/>
+<br/>
+
+__Deque 함수__
+
+<br/>
+
+- d.assign(int a, int b) : 해당 범위 a의 값을 b로 초기화 <br/>
+
+<br/>
+
+덱의 값을 새로 초기화 한다.
+
+<br/>
+
+```c++
+#include <iostream>
+#include <deque>
+using namespace std;
+
+int main() {
+	
+	deque<int> d(5, 2);
+	d.assign(2, 10);
+	
+	for (int i = 0; i < d.size(); i++)
+	cout << d[i] << " ";
+	
+	return 0;
+}
+```
+
+<br/>
+
+> 10 10 <br/>
+
+<br/>
+
+- d.at(idx) : idx번째 원소를 참조 (속도는 느리지만 범위 점검) <br/>
+- d[idx] : idx번째 원소를 참조 (범위 점검 안해서 속도 빠름) <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+#include <deque>
+using namespace std;
+
+int main() {
+	
+	deque<int> d = {10, 20, 30, 40};
+	
+	cout << d.at(5) << " ";		// runtime error!!
+	cout << d[5] << " ";		// 0 으로 출력
+
+	return 0;
+}
+```
+
+<br/>
+
+참조 관련 <br/>
+
+- d.front() : 첫번째 원소를 참조 <br/>
+- d.back() : 마지막 원소를 참조 <br/>
+
+<br/>
+
+삽입 및 삭제 <br/>
+
+<br/>
+
+- d.clear() : 모든 원소를 제거 <br/>
+- d.push_front(element) : 첫 원소 앞에 원소 element 삽입 <br/>
+- d.push_back(element) : 마지막 원소 뒤에 원소 element 삽입 <br/>
+- d.pop_front() : 첫 원소를 제거 <br/> 
+- d.pop_back() : 마지막 원소를 제거 <br/> 
+- d.begin() : 첫번째 원소 (주로, iterator와 사용) <br/>
+- d.end() : 마지막의 다음 원소 (주로, iterator와 사용) <br/>
+
+<br/>
+
+크기(size) 및 메모리 할당(capacity) <br/>
+
+<br/>
+
+- d.resize(n) : deque의 size를 n으로 변경 <br/>
+- d.resize(n,3) : deque의 size를 n으로 변경하고, 더 커진 경우 인자를 3으로 초기화 <br/>
+- d.size() : 원소의 갯수를 반환 <br/>
+
+<br/>
+
+기타 <br/>
+
+<br/>
+
+- d2.swap(d1) : v1과 v2의 원소 내용을 바꿈 <br/> 
+- d.insert(a, b, c) : a번째 위치부터 b개의 원소 4를 삽입 (a+1원소들은 뒤로 밀림) <br/>
+- d.insert(a, b) : a번째 위치에 값 3을 삽입 <br/>
+- d.erase(iter) : iter가 가리키는 원소를 제거 <br/>
+- d.empty() : vector가 비었으면 true 리턴 (size = 0) <br/>
+
+<br/>
+
+__Deque 예제__
+
+<br/>
+
+```c++
+#include <iostream>
+#include <deque>
+using namespace std;
+
+int main() {
+	
+	deque<int> d = {10, 20, 30, 40}; // dequer 객체의 선언 및 초기화
+	cout << "d size is " << d.size() << endl;
+
+	d.push_back(50);
+	cout << "d size is " << d.size() << endl;
+	cout << "d[4] = " << d[4] << endl;
+
+    return 0;
+
+}
+```
+
+<br/>
+
+> d size is 4 <br/>
+> d size is 5 <br/>
+> d[4] = 50 <br/>
+
+<br/>
+<br/>
+
+## 1-3) 리스트 (List)
+
+<br/>
+
+이중 연결 리스트(doubly linked list)의 클래스 템플릿 표현을 하는 시퀀스 컨테이너 <br/>
+양방향 접근, 빠른 삽입과 삭제를 할 수 있지만, 임의 접근은 할 수는 없다.<br/>
+
+<br/>
+
+__List의 특징__
+
+<br/>
+
+- 저장된 원소에 대한 양방향 접근 (++,--)이 가능하지만 임의 접근 (at, [])은 불가능 하다. <br/>
+- 이중 연결 리스트(doubly linked list) 기반이다. <br/>
+- 배열의 양방양 삽입, 삭제를 비롯한 정렬, 연결 등이 가능하다. <br/>
+
+<br/>
+
+__List의 사용__
+
+<br/>
+
+List를 사용하기 위해선 헤더 파일을 선언해야 한다. <br/>
+
+<br/>
+
+```c++
+#include <list>
+```
+
+<br/>
+
+__List의 선언__
+
+<br/>
+
+List의 기본 선언 방법은 아래와 같다. <br/>
+
+<br/>
+
+> list<템플릿인수> 객체이름(생성자인수);
+
+<br/>
+
+List를 선언하는 방법은 아래의 방법이 있다. <br/>
+
+<br/>
+
+```c++
+list<int> l1;                 // list 선언 (모든 덱요소 0으로 초기화)
+list<int> l2 = {10, 20, 30};  // list 객체의 선언 및 초기화
+list<int> l3(4);              // int형 list 생성 후 크기를 4로 할당(모든 덱요소 0으로 초기화)
+list<list<int>> l4;           // 2차원 list 생성
+list<int> l5(5, 2);           // 크기가 5이고 요소가 2인 list 생성
+- 2로 초기화된 5개의 원소를 가지는 list l5를 생성합니다
+```
+
+<br/>
+
+다음은 위의 방법으로 리스트를 선언하고 출력한 결과다.<br/>
+
+<br/>
+
+```c++
+#include <iostream>
+#include <list>
+using namespace std;
+
+int main() {
+	
+	list<int> l2 = {10, 20, 30};
+	for (int i : l2)
+	cout << i << endl;
+	return 0;
+}
+```
+
+<br/>
+
+> 10 <br/>
+> 20 <br/>
+> 30 <br/>
+
+<br/>
+<br/>
+
+__List 함수__
+
+<br/>
+
+- l.assign(int a, int b) : 해당 범위 a의 값을 b로 초기화 <br/>
+
+<br/>
+
+리스트의 값을 새로 초기화 한다.
+
+<br/>
+
+```c++
+#include <iostream>
+#include <list>
+using namespace std;
+
+int main() {
+
+	list<int> l(5, 2);
+	l.assign(2, 10);
+	
+	for (int i : l)
+	cout << i << " ";
+	
+	return 0;
+}
+```
+
+<br/>
+
+> 10 10 <br/>
+
+<br/>
+
+- 리스트에서는 at, []을 통한 임의 참조는 불가능 하다. <br/>
+
+<br/>
+
+참조 관련 <br/>
+
+- l.front() : 첫번째 원소를 참조 <br/>
+- l.back() : 마지막 원소를 참조 <br/>
+
+<br/>
+
+삽입 및 삭제 <br/>
+
+<br/>
+
+- l.clear() : 모든 원소를 제거 <br/>
+- l.push_front(element) : 첫 원소 앞에 원소 element 삽입 <br/>
+- l.push_back(element) : 마지막 원소 뒤에 원소 element 삽입 <br/>
+- l.pop_front() : 첫 원소를 제거 <br/> 
+- l.pop_back() : 마지막 원소를 제거 <br/> 
+- l.begin() : 첫번째 원소 (주로, iterator와 사용) <br/>
+- l.end() : 마지막의 다음 원소 (주로, iterator와 사용) <br/>
+
+<br/>
+
+크기(size) 및 메모리 할당(capacity) <br/>
+
+<br/>
+
+- l.resize(n) : list의 size를 n으로 변경 <br/>
+- l.resize(n,3) : list의 size를 n으로 변경하고, 더 커진 경우 인자를 3으로 초기화 <br/>
+- l.size() : 원소의 갯수를 반환 <br/>
+
+<br/>
+
+기타 <br/>
+
+<br/>
+
+- l2.swap(l1) : l1과 l2의 원소 내용을 바꿈 <br/> 
+- l.remove(i) : i와 같은 원소를 제거 <br/>
+- l.empty() : vector가 비었으면 true 리턴 (size = 0) <br/>
+- l2.splice(iter2, l1) : l2에서 iter2이 가리키는 곳에 lt1의 모든 원소를 잘라 붙인다. <br/> 
+- l.unique() : 양 옆에 중복되는 원소가 있다면 삭제한다. <br/>
+- l2.merge(l1) : l1을 l2내부로 병합하여 정렬한다. <br/>
+l2의 첫 원소부터 탐색해 정렬한다. 정렬되있지 않다면 사용하지 않는 것이 좋다. <br/>
+
+<br/>
+
+__List 예제__
+
+<br/>
+
+```c++
+#include <iostream>
+#include <list>
+using namespace std;
+
+bool function(const int& x) { return (x>5); }
+
+int main() {
+
+	list<int> l = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10};
+	l.remove_if(function);
+	
+	for (int i : l)
+	cout << i << " ";
+	
+	return 0;
+}
+```
+
+<br/>
+
+> 1 2 3 4 5 <br/>
+
+<br/>
+
+remove_if를 통해 function의 값이 true인 경우 삭제하고, 이에 해당하는 값은 (6, 7, 8, 9, 10)이다. <br/>
+따라서, 위 다섯개의 원소가 삭제 되어 1 2 3 4 5 가 남는다. <br/>
+
+<br/>
+<br/>
+
+```c++
+#include <iostream>
+#include <list>
+using namespace std;
+
+int main() {
+
+	list<int> l1 = {6, 12, 14, 6, 2};
+	list<int> l2 = {10, 16, 18};
+	list<int>::iterator Iter = ++l2.begin();
+
+	l2.splice(Iter, l1);
+	
+	for (int i : l2)
+	cout << i << " ";
+	
+	return 0;
+}
+```
+
+<br/>
+
+> 10 6 12 14 6 2 16 18  <br/>
+
+l1 = {6, 12, 14, 6, 2} <br/>
+l2 = {10, 16, 18} <br/>
+Iter : l2의 시작점 <br/>
+Iter = ++l2.begin() : 시작점에서 위치 1 더함<br/>
+
+따라서, l2의 맨 앞의 다음 원소에 l1을 붙인다.
+
+<br/>
+<br/>
+
+## 1-4) 순방향 리스트 (Forward_List)
+
+<br/>
+
+단일 연결 리스트(Singly linked list)의 클래스 템플릿 표현을 하는 시퀀스 컨테이너 <br/>
+단방향 접근만 가능하고 리스트와 동일하게 임의 접근은 불가능하다.<br/>
+C++11에 새로 추가된 컨테이너 <br/>
+
+<br/>
+
+__Forward List의 특징__
+
+<br/>
+
+- 저장된 원소에 대한 단방향 접근 (++,--)이 가능하지만 임의 접근 (at, [])은 불가능 하다. <br/>
+- 이중 연결 리스트(doubly linked list) 기반이다. <br/>
+- 배열의 양방양 삽입, 삭제를 비롯한 정렬, 연결 등이 가능하다. <br/>
+
+<br/>
+
+__Forward List의 사용__
+
+<br/>
+
+Forward List를 사용하기 위해선 헤더 파일을 선언해야 한다. <br/>
+
+<br/>
+
+```c++
+#include <forward_list>
+```
+
+<br/>
+
+__Forward List의 선언__
+
+<br/>
+
+Forward List의 기본 선언 방법은 아래와 같다. <br/>
+
+<br/>
+
+> forward_list<템플릿인수> 객체이름(생성자인수);
+
+<br/>
+
+Forward List를 선언하는 방법은 아래의 방법이 있다. <br/>
+
+<br/>
+
+```c++
+forward_list<int> l1;                 // forward_list 선언 (모든 덱요소 0으로 초기화)
+forward_list<int> l2 = {10, 20, 30};  // forward_list 객체의 선언 및 초기화
+forward_list<int> l3(4);              // int형 forward_list 생성 후 크기를 4로 할당(모든 덱요소 0으로 초기화)
+forward_list<forward_list<int>> l4;   // 2차원 forward_list 생성
+forward_list<int> l5(5, 2);           // 크기가 5이고 요소가 2인 forward_list 생성
+- 2로 초기화된 5개의 원소를 가지는 forward_list l5를 생성합니다
+```
+
+<br/>
+
+다음은 위의 방법으로 리스트를 선언하고 출력한 결과다.<br/>
+
+<br/>
+
+```c++
+#include <iostream>
+#include <forward_list>
+#include <iterator>
+using namespace std;
+
+int main() {
+
+	forward_list<int> l1 = {6, 12, 14, 6, 2};
+	forward_list<int>:: iterator iter1 = l1.begin();
+	
+	copy(l1.begin(), l1.end(), ostream_iterator<int>(cout, " "));
+	cout << endl; 
+	
+	return 0;
+}
+```
+
+<br/>
+
+> 6 12 14 6 2 <br/>
+
+<br/>
+
+- 반대로 참조하게 된다면 런타임 에러가 발생한다. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+#include <forward_list>
+#include <iterator>
+using namespace std;
+
+int main() {
+
+	forward_list<int> l1 = {6, 12, 14, 6, 2};
+	forward_list<int>:: iterator iter1 = l1.begin();
+	
+	copy(l1.end(), l1.begin(), ostream_iterator<int>(cout, " "));
+	cout << endl; 
+	
+	return 0;
+}
+```
+
+<br/>
+
+> Runtime Error <br/>
+
+<br/>
+<br/>
+
+__Forward List 함수__
+
+<br/>
+
+- l.assign(int a, int b) : 해당 범위 a의 값을 b로 초기화 <br/>
+
+<br/>
+
+- 순방향 리스트에서는 at, []을 통한 임의 참조는 불가능 하다. <br/>
+
+<br/>
+
+참조 관련 <br/>
+
+- l.front() : 첫번째 원소를 참조 <br/>
+- l.back() : 사용 불가 <br/>
+
+<br/>
+
+삽입 및 삭제 <br/>
+
+<br/>
+
+- l.clear() : 모든 원소를 제거 <br/>
+- l.push_front(element) : 첫 원소 앞에 원소 element 삽입 <br/>
+- l.push_back(element) : 사용 불가 <br/>
+- l.pop_front() : 첫 원소를 제거 <br/> 
+- l.pop_back() : 사용 불가 <br/> 
+- l.begin() : 첫번째 원소 (주로, iterator와 사용) <br/>
+- l.end() : 마지막의 다음 원소 (주로, iterator와 사용) <br/>
+
+<br/>
+
+크기(size) 및 메모리 할당(capacity) <br/>
+
+<br/>
+
+- l.resize(n) : list의 size를 n으로 변경 <br/>
+- l.resize(n,3) : list의 size를 n으로 변경하고, 더 커진 경우 인자를 3으로 초기화 <br/>
+- l.size() : 원소의 갯수를 반환 <br/>
+
+<br/>
+
+기타 <br/>
+
+<br/>
+
+- l2.swap(l1) : l1과 l2의 원소 내용을 바꿈 <br/> 
+- l.remove(i) : i와 같은 원소를 제거 <br/>
+- l.empty() : vector가 비었으면 true 리턴 (size = 0) <br/>
+- l.unique() : 양 옆에 중복되는 원소가 있다면 삭제한다. <br/>
+- l2.merge(l1) : l1을 l2내부로 병합하여 정렬한다. <br/>
+l2의 첫 원소부터 탐색해 정렬한다. 정렬되있지 않다면 사용하지 않는 것이 좋다. <br/>
+
+<br/>
+<br/>
