--- a/4. 표준 템플릿 라이브러리(STL)/#3. STL 컨테이너 - 2.md
+++ b/4. 표준 템플릿 라이브러리(STL)/#3. STL 컨테이너 - 2.md
@@ -34,3 +34,240 @@ __연관 컨테이너의 특징__
 - 연관 컨테이너 : 요소들의 저장 순서를 알 수 없고, Key와 Value를 통한 접근 <br/>
 
 <br/>
+<br/>
+
+## 2-1) 집합 (Set)
+
+<br/>
+
+저장하는 데이터 그 자체를 키로 사용하는 가장 단순한 연관 컨테이너 <br/>
+
+<br/>
+
+__Set의 특징__
+
+<br/>
+
+- 데이터를 벡터와 달리 오름차순으로 정렬된 위치에 요소를 삽입한다.<br/>
+- 데이터가 정렬되어 있어 검색 속도가 매우 빠르다. <br/>
+- 키의 중복은 허용되지 않기 때문에 같은 값을 저장할 수 없다. <br/>
+
+<br/>
+
+- 하지만 멀티집합(multiset)은 키의 중복을 허용하므로, 같은 값을 여러 번 저장할 수 있습니다.
+
+
+__Set의 사용__
+
+<br/>
+
+Set을 사용하기 위해선 헤더 파일을 선언해야 한다. <br/>
+
+<br/>
+
+```c++
+#include <set>
+```
+
+<br/>
+
+__Set의 선언__
+
+<br/>
+
+집합의 기본 선언 방법은 아래와 같다. <br/>
+
+<br/>
+
+> set<템플릿인수> 객체이름;
+
+<br/>
+
+집합을 선언하는 방법은 다음과 같다. <br/>
+
+<br/>
+
+```c++
+set s;                // 빈 set 컨테이너 생성 
+set s(pred);          // 정렬 기준이 pred 조건자인 set 컨테이너 생성 
+set s(s2);            // s2 컨테이너의 복사 생성
+set s(b,e);           // 반복자 구간 [begin, end)로 초기화된 set 컨테이너 생성
+set s(b,e, pred);     // 반복자 구간 [begin, end)로 초기화되었으며, 정렬 기준은 pred 조건자인 set 컨테이너 생성
+```
+
+<br/>
+
+집합은 다음과 같이 선언할 수 있다. <br/>
+
+<br/>
+
+```c++
+#include <set>
+#include <iostream>
+
+using namespace std;
+
+int main() {
+	
+	set<int> s;
+	
+	s.insert(10);
+	s.insert(50);
+	s.insert(20);
+	s.insert(40);
+	s.insert(30);
+	
+	set<int>::iterator iter;
+	for(iter = s.begin(); iter != s.end(); iter++){
+		cout << *iter << " ";
+	}
+	cout << endl;
+	
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> 10 20 30 40 50 <br/>
+
+<br/>
+<br/>
+
+반복 생생자를 통해 집합은 다음과 같이 생성할 수 있다.
+
+<br/>
+
+```c++
+#include <set>
+#include <iostream>
+
+using namespace std;
+
+int main() {
+	
+	int arr[] = {20, 30, 40, 50};
+	auto s = set<int>(arr, arr+2);
+	
+	set<int>::iterator iter;
+	for(iter = s.begin(); iter != s.end(); iter++){
+		cout << *iter << " ";
+	}
+	cout << endl;
+	
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> 20 30 <br/>
+
+<br/>
+    
+정수형 배열 arr 에서 첫 원소 (arr)와 그 다음 원소 (arr+2)까지의 원소를 집합 s 로 선언 하였다. <br/>
+
+<br/>
+<br/>
+
+__Set 함수__
+
+<br/>
+
+참조 관련 <br/>
+
+- s.begin() : s의 시작을 가리키는 반복자 반환 <br/>
+- s.end() : s의 끝을 가리키는 반복자 반환 <br/>
+- s.rbegin() : s의 역순의 시작을 가리키는 반복자를 반환 <br/>
+- s.rend() : s의 역순의 끝을 가리키는 반복자를 반환 <br/>
+- s.find(x) : s에서 값이 x인 원소를 찾아 존재하면 해당 원소의 위치를 가리키는 반복자를 반환 (존재하지 않으면 end() 반복자를 반환) <br/>
+
+<br/>
+
+삽입 및 삭제 <br/>
+
+- s.insert(x) : s에 값이 x인 원소 추가 <br/>
+- s.erase(x) : s에서 값이 x인 원소 삭제 <br/>
+- s.clear() : s의 모든 원소를 제거 <br/>
+
+<br/>
+
+크기(size) 및 메모리 할당(capacity) <br/>
+
+- s.size() : s의 원소 개수를 반환 <br/>
+- s.count(x) : s에서 값이 x인 원소의 개수를 반환 <br/>
+
+<br/>
+<br/>
+
+__멀티 집합 (multiset)__
+
+<br/>
+
+중복된 값을 허용하는 집합 컨테이너 <br/>
+
+<br/>
+
+```c++
+#include <set>
+#include <iostream>
+
+using namespace std;
+
+int main() {
+	
+	
+	multiset<int> ms;
+	ms.insert(10);
+	ms.insert(50);
+	ms.insert(20);
+	ms.insert(30);
+	ms.insert(30);
+	
+	set<int>::iterator iter;
+	for(iter = ms.begin(); iter != ms.end(); iter++){
+		cout << *iter << " ";
+	}
+	cout << endl;
+	
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> 10 20 30 30 50 <br/>
+
+<br/>
+<br/>
+
+## 2-2) 맵 (map)
+
+<br/>
+
+
+
+
+
+
+
+
+참조 관련 <br/>
+
+삽입 및 삭제 <br/>
+
+크기(size) 및 메모리 할당(capacity) <br/>
+
+기타 <br/>
