Update #3. STL 컨테이너 - 2.md

--- a/4. 표준 템플릿 라이브러리(STL)/#3. STL 컨테이너 - 2.md
+++ b/4. 표준 템플릿 라이브러리(STL)/#3. STL 컨테이너 - 2.md
@@ -253,21 +253,220 @@ __출력 결과__
 <br/>
 <br/>
 
-## 2-2) 맵 (map)
+## 2-2) 맵 (Map)
 
 <br/>
 
+키(Key)와 값(Value)의 쌍으로 데이터를 관리하는 연관 컨테이너
 
+<br/>
 
+__Map의 특징__
 
+<br/>
 
+- Set 컨테이너와 마찬가지로 정렬된 위치에 요소를 삽입하므로 검색 속도가 매우 빠르다. <br/>
+- Key는 반드시 유일해야 하며, 중복은 허용하지 않는다. <br/>
+- 멀티맵(multimap)은 하나의 Key에 여러개의 Value가 연결 될 수 있다.<br/>
 
+<br/>
 
+이 두 컨테이너는 모두 map 헤더 파일에 정의되어 있습니다.
+
+<br/>
+
+__Map의 사용__
+
+<br/>
+
+Map을 사용하기 위해선 헤더 파일을 선언해야 한다. <br/>
+
+<br/>
+
+```c++
+#include <map>
+```
+
+<br/>
+
+__Map의 선언__
+
+<br/>
+
+Map의 기본 선언 방법은 아래와 같다. <br/>
+
+<br/>
+
+> map<템플릿인수1, 템플릿인수2> 객체이름(생성자인수);
+
+<br/>
+
+Map을 선언하는 방법은 아래의 방법이 있다. <br/>
+
+<br/>
+
+```c++
+map<int, string> m;	// key type : int, value type : string으로 선언한 map
+map<int, int> m(pred);	// 정렬 기준 pred (오름차순, 내림차순)으로 정렬한 map
+map<int> m2(m1);	// m1를 복사하여 생성한 map m2
+```
+
+<br/>
+
+다음은 위의 방법으로 map을 선언하고 출력한 결과다.<br/>
+
+<br/>
+
+```c++
+#include <map>
+#include <iostream>
+#include <string>
+
+using namespace std;
+
+int main() {
+	
+	map<int, string> m;
+	m.insert(pair<int, string>(3, "Amazon"));
+	m.insert(pair<int, string>(2, "Netflex"));
+	m[5] = "Google";
+	m[1] = "Facebook";
+//	m.insert(5, "Google");
+//	m.insert(1, "Facebook");
+	
+	map<int, string>::iterator iter;
+	for(iter = m.begin(); iter != m.end(); iter++){
+		cout << "[" << iter->first << ", " << iter->second << "]" << " " ;
+	}
+	cout << endl;
+	
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> [1, Facebook] [2, Netflex] [3, Amazon] [5, Google] <br/>
+
+<br/>
+<br/>
+
+__List 함수__
+
+<br/>
 
 참조 관련 <br/>
 
+- m.begin() : s의 시작을 가리키는 반복자 반환 <br/>
+- m.end() : s의 끝을 가리키는 반복자 반환 <br/>
+- m.rbegin() : s의 역순의 시작을 가리키는 반복자를 반환 <br/>
+- m.rend() : s의 역순의 끝을 가리키는 반복자를 반환 <br/>
+- m.find(x) : s에서 값이 x인 원소를 찾아 존재하면 해당 원소의 위치를 가리키는 반복자를 반환 (존재하지 않으면 end() 반복자를 반환) <br/>
+
+<br/>
+
 삽입 및 삭제 <br/>
+
+- m.insert(x) : s에 값이 x 원소 추가 <br/>
+- m.insert(k) : s에 값이 pair 객체 k<key, value> 원소 추가 <br/>
+- m.insert(iter, k) : s에 iter를 활용한 pair 객체 k<key, value> 원소 추가 <br/>
+- m.erase(x) : s에서 값이 x인 원소 삭제 <br/>
+- m.erase(begin, end) : s에서 반복자 begin부터 end인 원소 삭제 <br/>
+- m.clear() : s의 모든 원소를 제거 <br/>
+
+<br/>
 
 크기(size) 및 메모리 할당(capacity) <br/>
 
-기타 <br/>
+- m.size() : s의 원소 개수를 반환 <br/>
+- m.count(x) : s에서 값이 x인 원소의 개수를 반환 <br/>
+
+<br/>
+
+기타<br/>
+
+- m.upper_bound(k) : 원소 k가 끝나는 구간의 반복자 <br/>
+- m.lower_bound(k) : 원소 k가 시작하는 구간의 반복자 <br/>
+- m.equal_range(k) : 원소 k가 시작하는 구간과 끝나는 구간의 반복자 pair 객체를 반환 <br/>
+- m.value_comp() : value의 정렬 기준 조건자를 반환 <br/>
+- m.key_comp() : key의 정렬 기준 조건자 반환 <br/>
+
+<br/>
+<br/>
+
+__멀티 맵 (multimap)__
+
+<br/>
+
+중복된 값을 허용하는 맵 컨테이너 <br/>
+
+<br/>
+
+```c++
+#include <map>
+#include <iostream>
+#include <string>
+
+using namespace std;
+
+int main() {
+	
+	multimap<int, string> m;
+	m.insert(pair<int, string>(1, "Amazon"));
+	m.insert(pair<int, string>(1, "Netflex"));
+	m.insert(pair<int, string>(5, "Google"));
+	m.insert(pair<int, string>(1, "Facebook"));
+	
+	map<int, string>::iterator iter;
+	for(iter = m.begin(); iter != m.end(); iter++){
+		cout << "[" << iter->first << ", " << iter->second << "]" << " " ;
+	}
+	cout << endl;
+	
+	return 0;
+}
+```
+
+<br/>
+
+__츨력 결과__
+
+<br/>
+
+> [1, Amazon] [1, Netflex] [1, Facebook] [5, Google] <br/>
+
+<br/>
+<br/>
+
+## 2-3) 순서가 지정되지 않은 연관 컨테이너
+
+<br/>
+
+순서가 지정되지 않은 연관 컨테이너는 연관 컨테이너와 동일 하지만, 입력 순서에 따라 컨테이너 순서가 정해진다. <br/>
+unordered가 앞에 추가 된다. <br/>
+
+__unordered map의 특징__ <br/>
+
+<br/>
+
+- 보통의 연관 컨테이너는 트리(tree) 구조를 기반으로 동작하지만, unordered container는 해시 테이블(hash table)을 기반으로 동작한다. <br/>
+- 요소의 추가, 삭제 속도가 빨라졌으며, 다양한 검색 알고리즘을 사용할 수 있다. <br/>
+- 순서가 지정된 연관 컨테이너는 양방향 반복자를 지원하지만, 이 컨테이너는 순방향 반복자만을 지원한다. <br/>
+
+<br/>
+
+__unordered map의 종류__ <br/>
+ 
+<br/>
+
+- unordered_set
+- unordered_multiset
+- unordered_map
+- unordered_multimap
+
+
+<br/>
