--- a/4. 표준 템플릿 라이브러리(STL)/#5. 반복자.md
+++ b/4. 표준 템플릿 라이브러리(STL)/#5. 반복자.md
@@ -162,3 +162,242 @@ STL에서 반복자는 계층적으로 분류된다. <br/>
 
 <br/>
 <br/>
+
+## 5-7) 기타 반복자
+
+<br/>
+
+### 1. 스트림 반복자 (Stream Iterator) 
+
+<br/>
+
+반복자 연산을 통해 알고리즘이 입출력 스트림에 쉽게 접근할 수 있도록 해준다. <br/>
+입력 스트림 반복자는 istream_iterator, 출력 스트림 반복자는 ostream_iterator 클래스 템플릿에서 제공
+
+<br/>
+
+__istream_iterator 클래스 템플릿__
+
+<br/>
+
+```c++
+template <class T, class charT = char, class traits = char_traits<charT>, class Distance = ptrdiff_t>
+class istream_iterator : public iterator<input_iterator_tag, T, Distance, const T*, const T&> { ... }
+```
+
+<br/>
+
+__ostream_iterator 클래스 템플릿__
+
+<br/>
+
+```c++
+template <class T, class charT = char, class traits = char_traits<charT> >
+class ostream_iterator : public iterator<output_iterator_tag, void, void, void, void> { ... }
+```
+
+<br/>
+
+다음 예제는 입출력 스트립 반복자와 copy 함수를 이용하여 벡터의 데이터를 출력한 예제이다. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+#include <iterator>
+#include <vector>
+using namespace std;
+
+int main(void)
+{
+	vector<int> vc = {1, 2, 3, 4, 5};
+	copy(vc.begin(), vc.end(), ostream_iterator<int>(cout));
+	cout << endl;
+	copy(vc.begin(), vc.end(), ostream_iterator<int>(cout, " "));
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> 12345 <br/>
+> 1 2 3 4 5 <br/>
+
+<br/>
+<br/>
+
+
+### 2. 삽입 반복자 (Insert Iterator)
+
+<br/>
+
+반복자의 복사 연산을 삽입 연산으로 변환 <br/>
+값을 덮어쓰지 않고, 그 요소의 위치에 새로운 값을 삽입할 수 있게 해준다<br/>
+
+<br/>
+
+__1. insert_iterator__ <br/>
+
+<br/>
+
+- 해당 컨테이너의 특정 위치에 삽입 <br/>
+- insert()	
+- 모든 컨테이너에 사용 가능
+
+<br/>
+
+__2. back_insert_iterator__ <br/>
+
+<br/>
+
+- 해당 컨테이너의 뒤쪽에 삽입
+-	push_back()
+-	시퀀스 컨테이너 (vector, list, deque)에 사용 가능
+
+<br/>
+
+__3. front_insert_iterator__ <br/>
+
+<br/>
+
+- 해당 컨테이너의 앞쪽에 삽입
+- push_front()
+- list, deque에 사용 가능
+
+<br/>
+
+다음은 push_back() 함수와 push_front() 함수의 삽입 반복자를 사용하여 리스트에 요소를 삽입하는 예제이다.
+
+<br/>
+
+```c++
+#include <iostream>
+#include <iterator>
+#include <list>
+using namespace std;
+
+int main(void)
+{
+	list<int> ls = {10};
+	ls.push_back(20);	// back_insert_iterator를 사용함. 
+	ls.push_front(30);	// front_insert_iterator를 사용함. 
+	copy(ls.begin(), ls.end(), ostream_iterator<int>(cout, " "));
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> 30 10 20
+
+<br/>
+<br/>
+
+
+### 3. 역방향 반복자 (Reverse Iterator)
+
+<br/>
+
+순방향 반복자와는 반대 방향으로 동작하는 반복자, 증가 연산자 사용 시 역방향 이동 <br/>
+즉, 증가 연산자( ++ )를 사용하게 된다면 순방향 반복자의 역방향처럼 이동하게 된다. <br/>
+
+<br/>
+
+rbegin()과 rend() 멤버 함수를 사용하면 자동으로 reverse_iterator를 반환<br/>
+
+<br/>
+
+다음은 rbegin()과 rend() 함수의 역방향 반복자를 사용하여 리스트의 요소를 역순으로 출력하는 예제이다. <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+#include <iterator>
+#include <list>
+using namespace std;
+
+int main(void)
+{
+	list<int> ls = {10, 20, 30};
+	copy(ls.rbegin(), ls.rend(), ostream_iterator<int>(cout, " "));
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> 30 20 10 <br/>
+
+<br/>
+<br/>
+
+### 4. 상수 반복자 (Constant Iterator)
+
+<br/>
+
+반복자가 가리키는 값의 변경이 불가능한 상수 반복자 <br/>
+
+
+<br/>
+
+- 가리키는 요소를 상수화시킨 것이지 반복자 그 자체를 상수화시킨 것은 아니다. <br/>
+- 양방향 상수 반복자라면 앞뒤로 이동하며 다른 요소를 가리키는 것이 가능하다.<br/>
+- const_iterator 타입으로 정의된다.<br/>
+
+<br/>
+
+다음은 반복자를 사용하여 리스트의 첫 번째 요소의 값을 변경하는 예제다. <br/>
+
+```c++
+#include <iostream>
+#include <iterator>
+#include <list>
+using namespace std;
+
+int main(void)
+{
+	list<int> ls = {10, 20, 30};
+	list<int>::iterator iter;
+	list<int>::const_iterator citer;
+	
+	iter = ls.begin();
+	*iter = 100;
+	citer = ls.end();
+	// *citer = 300;	// 상수 반복자이므로 값의 변경은 불가능함. 
+		
+	for(citer = ls.begin(); citer != ls.end(); citer++)
+	{
+		cout << *citer << " ";
+	}
+	return 0;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> 100 20 30 <br/>
+
+<br/>
+
+위에서 상수 반복자로 사용된 citer는 변경이 불가능하다. <br/> 
+
+<br/>
+<br/>
+
